<resources>
    <string name="app_name">SportHub</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_feed">Feed</string>
    <string name="title_torneio">Jogos</string>
    <string name="title_criar_jogo">Criar Jogos</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_create_account">Need an account? <u>SIGN UP!</u></string>
    <string name="action_has_account">Already have an account <u>Login!</u></string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_sports">Sports</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tennis">Tennis</string>
    <string name="prompt_email">email</string>
    <string name="prompt_phone_number">Phone Number</string>
    <string name="prompt_sports">Favorite Sports</string>
    <string name="prompt_sex">Sex</string>
    <string name="prompt_date_of_birth">Birth date</string>
    <string name="prompt_last_name">Last name</string>

    <string-array name="sports">
        <item>Football</item>
        <item>Basketball</item>
        <item>Volleyball</item>
        <item>Tennis</item>
        <item>Boxing</item>
        <item>Rugby</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="playerId"></string>
    <string name="playerName"></string>
</resources>