<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.application.MindSet.ui.home.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.application.MindSet.ui.dashboard.DashboardFragment"
        android:label="@string/title_torneio"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.application.MindSet.ui.game.CreateGameFragment"
        android:label="@string/title_criar_jogo"
        tools:layout="@layout/fragment_create_game" />
</navigation>